--- a/resume-interactive.html
+++ b/resume-interactive.html
@@ -576,7 +576,7 @@
                     <div class="date">2022 - היום</div>
                 </div>
                 <div class="job-description">
-                    פיתוח והטמעה של אסטרטגיות שיווק דיגיטלי מותאמות אישית לעסקים בתחומים מגוונים. אחראי על כלל המערך השיווקי של הלקוחות, כולל תכנון וביצוע קמפיינים ממומנים בפלטפורמות דיגיטליות (פייסבוק ואינסטגרם), פיתוח טקטיקות ואסטרטגיות שיווק התואמות יעדי עסק ותקציב, אופטימיזציה ושדרוג של משפכי מכירות קיימים להגדלת קצב ההמרה, כתיבה שיווקית מקצועית לדפי נחיתה ומודעות ותכנים דיגיטליים, וייעוץ בפיתוח תכנים שיווקיים המותאמים לקהל היעד. המלצות מלקוחות זמינות לפי דרישה.
+                    פיתוח והטמעה של אסטרטגיות שיווק דיגיטלי מותאמות אישית לעסקים בתחומים מגוונים. אחראי על כלל המערך השיווקי של הלקוחות, כולל תכנון וביצוע קמפיינים ממומנים בפלטפורמות דיגיטליות (פייסבוק ואינסטגרם), פיתוח טקטיקות ואסטרטגיות שיווק התואמות יעדי עסק ותקציב, אופטימיזציה ושדרוג של משפכי מכירות קיימים להגדלת אחוז ההמרה, כתיבה שיווקית מקצועית לדפי נחיתה ומודעות ותכנים דיגיטליים, וייעוץ בפיתוח תכנים שיווקיים המותאמים לקהל היעד. המלצות מלקוחות זמינות לפי דרישה.
                 </div>
             </div>
 
