--- a/resume.html
+++ b/resume.html
@@ -152,6 +152,38 @@
             .contact-info { flex-direction: column; gap: 10px; }
             .job-header { flex-direction: column; }
         }
+
+        .youtube-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .youtube-video {
+            position: relative;
+            width: 100%;
+            padding-bottom: 56.25%; /* יחס 16:9 */
+            height: 0;
+            overflow: hidden;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .youtube-video iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
+        @media (max-width: 768px) {
+            .youtube-grid {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 <body>
@@ -342,6 +374,37 @@
                 <div class="skill-category">
                     <h4>מיומנויות אישיות</h4>
                     <p>תקשורת, מכירות, עבודה בצוות, יכולת למידה עצמית</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section">
+            <h2 class="section-title">המלצות</h2>
+            <div class="recommendations">
+                <p>צפו בהמלצות מלקוחות:</p>
+                <div class="youtube-grid">
+                    <div class="youtube-video">
+                        <iframe 
+                            width="100%" 
+                            height="315" 
+                            src="https://www.youtube.com/embed/NuIMVVpGBdM" 
+                            title="המלצת לקוח - סרטון ראשון" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
+                    <div class="youtube-video">
+                        <iframe 
+                            width="100%" 
+                            height="315" 
+                            src="https://www.youtube.com/embed/FfW-DEcKBUI" 
+                            title="המלצת לקוח - סרטון שני" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
             </div>
         </div>
