עדכון קורות חיים: הוספת סרטוני המלצה חדשים עם עיצוב משופר, כולל תמונה מוואטסאפ.

--- a/resume-interactive.html
+++ b/resume-interactive.html
@@ -614,7 +614,7 @@
                     <div class="date">2022 - היום</div>
                 </div>
                 <div class="job-description">
-                    פיתוח והטמעה של אסטרטגיות שיווק דיגיטלי מותאמות אישית לעסקים בתחומים מגוונים. אחראי על כלל המערך השיווקי של הלקוחות, כולל תכנון וביצוע קמפיינים ממומנים בפלטפורמות דיגיטליות (פייסבוק ואינסטגרם), פיתוח טקטיקות ואסטרטגיות שיווק התואמות יעדי עסק ותקציב, אופטימיזציה ושדרוג של משפכי מכירות קיימים להגדלת אחוז ההמרה, כתיבה שיווקית מקצועית לדפי נחיתה ומודעות ותכנים דיגיטליים, וייעוץ בפיתוח תכנים שיווקיים המותאמים לקהל היעד. המלצות מלקוחות זמינות לפי דרישה.
+                    פיתוח והטמעה של אסטרטגיות שיווק דיגיטלי מותאמות אישית לעסקים בתחומים מגוונים. אחראי על כלל המערך השיווקי של הלקוחות, כולל תכנון וביצוע קמפיינים ממומנים בפלטפורמות דיגיטליות (פייסבוק ואינסטגרם), פיתוח טקטיקות ואסטרטגיות שיווק התואמות יעדי עסק ותקציב, אופטימיזציה ושדרוג של משפכי מכירות קיימים להגדלת אחוז ההמרה, כתיבה שיווקית מקצועית לדפי נחיתה ומודעות ותכנים דיגיטליים, וייעוץ בפיתוח תכנים שיווקיים המותאמים לקהל היעד. המלצות מלקוחות זמינות לפי דרישה. <strong>סרטוני המלצה נמצאים בתחתית הדף.</strong>
                 </div>
             </div>
 
@@ -777,31 +777,14 @@
 
         <div class="section">
             <h2 class="section-title recommendations">המלצות</h2>
-            <div class="recommendations">
-                <p>צפו בהמלצות מלקוחות:</p>
-                <div class="youtube-grid">
-                    <div class="youtube-video">
-                        <iframe 
-                            width="100%" 
-                            height="315" 
-                            src="https://www.youtube.com/embed/NuIMVVpGBdM" 
-                            title="המלצת לקוח - סרטון ראשון" 
-                            frameborder="0" 
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                            allowfullscreen>
-                        </iframe>
-                    </div>
-                    <div class="youtube-video">
-                        <iframe 
-                            width="100%" 
-                            height="315" 
-                            src="https://www.youtube.com/embed/FfW-DEcKBUI" 
-                            title="המלצת לקוח - סרטון שני" 
-                            frameborder="0" 
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                            allowfullscreen>
-                        </iframe>
-                    </div>
+            <div class="recommendation-videos">
+                <!-- סרטוני המלצה -->
+                <div class="video-container">
+                    <iframe src="https://www.youtube.com/embed/your_video_id_1" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/your_video_id_2" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div class="recommendation-image" style="display: flex; justify-content: center; margin-top: 32px; margin-bottom: 32px;">
+                    <img src="recommendation-whatsapp.jpg" alt="המלצה מוואטסאפ" style="max-width: 400px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.12);">
                 </div>
             </div>
         </div>
