--- a/recommendations.html
+++ b/recommendations.html
@@ -71,8 +71,8 @@
     <div class="container">
         <h1>המלצות</h1>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/your_video_id_1" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/your_video_id_2" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/NuIMVVpGBdM" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/FfW-DEcKBUI" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="recommendation-image">
             <img src="recommendation-whatsapp.jpg.png" alt="המלצה מוואטסאפ">
