--- a/resume.html
+++ b/resume.html
@@ -383,8 +383,8 @@
             <div class="recommendation-videos">
                 <!-- סרטוני המלצה -->
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/your_video_id_1" frameborder="0" allowfullscreen></iframe>
-                    <iframe src="https://www.youtube.com/embed/your_video_id_2" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/NuIMVVpGBdM" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/FfW-DEcKBUI" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="recommendation-image" style="display: flex; justify-content: center; margin-top: 32px; margin-bottom: 32px;">
                     <img src="recommendation-whatsapp.jpg.png" alt="המלצה מוואטסאפ" style="max-width: 400px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.12);">
