--- a/resume-interactive.html
+++ b/resume-interactive.html
@@ -568,6 +568,7 @@
         <button onclick="downloadPDF()">📄 PDF</button>
         <button onclick="toggleAnimations()">✨ אנימציות</button>
         <button onclick="toggleFullscreen()">🔍 מסך מלא</button>
+        <button onclick="window.location.href='recommendations.html'">⭐ המלצות</button>
     </div>
     
     <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
@@ -582,9 +583,9 @@
     </div>
 
     <div class="container">
-        <div class="main-highlight" onclick="window.open('https://ecosupp-supp-anliis.vercel.app/', '_blank')">
-            <a href="https://ecosupp-supp-anliis.vercel.app/" target="_blank">
-                במקביל להגשת מועמדותי, פיתחתי אפליקציה חכמה שמאבחנת צרכים אישיים וממליצה על המוצרים שלכם תוך בניית אמון מדעי. ראו כיצד טכנולוגיה פוגשת טקטיקה שיווקית >>
+        <div class="main-highlight" onclick="window.location.href='recommendations.html'" style="cursor:pointer;">
+            <a href="recommendations.html" style="color: white; text-decoration: none; display: block; width: 100%; height: 100%;">
+                ⭐ לחצו כאן למעבר להמלצות (סרטונים + המלצה כתובה)
             </a>
         </div>
 
