עדכון קורות חיים: שינוי טקסט הקישור להמלצות לעיצוב ברור יותר, כולל הוספת קישור לעמוד ההמלצות.

--- a/resume-interactive.html
+++ b/resume-interactive.html
@@ -615,7 +615,7 @@
                     <div class="date">2022 - היום</div>
                 </div>
                 <div class="job-description">
-                    פיתוח והטמעה של אסטרטגיות שיווק דיגיטלי מותאמות אישית לעסקים בתחומים מגוונים. אחראי על כלל המערך השיווקי של הלקוחות, כולל תכנון וביצוע קמפיינים ממומנים בפלטפורמות דיגיטליות (פייסבוק ואינסטגרם), פיתוח טקטיקות ואסטרטגיות שיווק התואמות יעדי עסק ותקציב, אופטימיזציה ושדרוג של משפכי מכירות קיימים להגדלת אחוז ההמרה, כתיבה שיווקית מקצועית לדפי נחיתה ומודעות ותכנים דיגיטליים, וייעוץ בפיתוח תכנים שיווקיים המותאמים לקהל היעד. המלצות מלקוחות זמינות לפי דרישה. <strong>סרטוני המלצה נמצאים בתחתית הדף.</strong>
+                    פיתוח והטמעה של אסטרטגיות שיווק דיגיטלי מותאמות אישית לעסקים בתחומים מגוונים. אחראי על כלל המערך השיווקי של הלקוחות, כולל תכנון וביצוע קמפיינים ממומנים בפלטפורמות דיגיטליות (פייסבוק ואינסטגרם), פיתוח טקטיקות ואסטרטגיות שיווק התואמות יעדי עסק ותקציב, אופטימיזציה ושדרוג של משפכי מכירות קיימים להגדלת אחוז ההמרה, כתיבה שיווקית מקצועית לדפי נחיתה ומודעות ותכנים דיגיטליים, וייעוץ בפיתוח תכנים שיווקיים המותאמים לקהל היעד. המלצות מלקוחות זמינות לפי דרישה. <strong><a href="recommendations.html" style="color: #25643b; text-decoration: underline; cursor: pointer;">להמלצות לחצו כאן</a></strong>
                 </div>
             </div>
 
@@ -788,7 +788,7 @@
                     <img src="recommendation-whatsapp.jpg.png" alt="המלצה מוואטסאפ" style="max-width: 400px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.12);">
                 </div>
             </div>
-            <strong><a href="recommendations.html" style="color: #25643b; text-decoration: underline; cursor: pointer;">לחצו כאן למעבר לסרטוני המלצה</a></strong>
+            <strong><a href="recommendations.html" style="color: #25643b; text-decoration: underline; cursor: pointer;">להמלצות לחצו כאן</a></strong>
         </div>
 
         <div class="section">
