--- a/recommendations.html
+++ b/recommendations.html
@@ -75,7 +75,7 @@
             <iframe src="https://www.youtube.com/embed/FfW-DEcKBUI" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="recommendation-image">
-            <img src="recommendation-whatsapp.jpg.png" alt="המלצה מוואטסאפ">
+            <img src="recommendation-whatsapp.png" alt="המלצה מוואטסאפ">
         </div>
         <button class="back-btn" onclick="goBackToResume()">חזרה לקורות החיים</button>
     </div>
