--- a/resume-interactive.html
+++ b/resume-interactive.html
@@ -785,7 +785,7 @@
                     <iframe src="https://www.youtube.com/embed/FfW-DEcKBUI" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="recommendation-image" style="display: flex; justify-content: center; margin-top: 32px; margin-bottom: 32px;">
-                    <img src="recommendation-whatsapp.jpg.png" alt="המלצה מוואטסאפ" style="max-width: 400px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.12);">
+                    <img src="recommendation-whatsapp.png" alt="המלצה מוואטסאפ" style="max-width: 400px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.12);">
                 </div>
             </div>
             <strong><a href="recommendations.html" style="color: #25643b; text-decoration: underline; cursor: pointer;">להמלצות לחצו כאן</a></strong>
